<resources>
    <string name="app_name">Address Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookmark">Bookmark</string>
    <string name="map">Map</string>
    <string name="account">Account</string>
    <string name="my_location">Мои адреса</string>
    <string name="search">Поиск</string>
    <string name="button_text">Добавить адрес в избранное</string>
    <string name="save_place">Добавить адрес в избранное</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
</resources>