<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    app:cardCornerRadius="14dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/t1"
        style="@style/TitleText"
        android:layout_marginTop="4dp"
        android:text="@string/save_place"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:background="@color/white"
        android:clickable="false"
        android:ellipsize="end"
        android:hint="@string/search"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/topLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/editIcon"
        app:layout_constraintTop_toBottomOf="@id/t1" />

    <ImageView
        android:id="@+id/editIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:src="@drawable/ic_edit_icon"
        app:layout_constraintBottom_toBottomOf="@id/title"
        android:padding="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/title" />

    <View
        android:id="@+id/topLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/textColor"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <View
        android:id="@+id/centerLine"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/textColor"
        app:layout_constraintBottom_toBottomOf="@id/cancelButton"
        app:layout_constraintLeft_toRightOf="@id/cancelButton"
        app:layout_constraintRight_toLeftOf="@id/saveButton"
        app:layout_constraintTop_toTopOf="@id/cancelButton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cancelButton"
        style="@style/ButtonText"
        android:layout_width="0dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/centerLine"
        app:layout_constraintTop_toBottomOf="@id/topLine" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/saveButton"
        style="@style/ButtonText"
        android:layout_width="0dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@id/cancelButton"
        app:layout_constraintLeft_toRightOf="@id/centerLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancelButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>